kubernetes/apollo/apps/flux-system/flux-operator/ui/httproute.yaml
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: flux-operator
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  hostnames:
    - "flux-ui.${SECRET_DOMAIN}"
  rules:
    - backendRefs:
        - name: flux-operator
          port: 9080
